--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,425 +1,109 @@
-/*--------------------(  Default CSS  )--------------------*/
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* Fonts Montserrat*/
-@font-face {
-  font-family: "montserrat-bold";
-  font-weight: 700;
-  line-height: 24.38px;
-  src: url("../fonts/Montserrat-VariableFont_wght.ttf");
-}
-/* Fonts Lora */
-@font-face {
-  font-family: "lora";
-  line-height: 24.38px;
-  src: url("../fonts/Lora-VariableFont_wght.ttf");
-}
-/* Fonts Hind */
-@font-face {
-  font-family: "hind";
-  line-height: 24.38px;
-  src: url("../fonts/HindMadurai-Light.ttf");
-}
-
-/* colors */
-:root {
-  --light-mode-BG: #ffffff;
-  --dark-mode-BG: #06293d;
-  --div-dark: #06283d;
-  --blur-text: #d0d0d0;
-  --card-btns-color: #256d85;
-  --bg-white-card: #F6F6F6;
-  --white: #FFFFFF;
-  --white-60: #ffffffbc;
-  --black: #000000;
-  --black-93: #00000093;
-  --black-60: #000000bc;
-}
-/* destroy Scrollbar */
-::-webkit-scrollbar {
-  display: none;
-}
-
-body {
-  height: 100svh;
-}
-/***** main-container *****/
 .main-container {
-  margin: 0 auto;
-  width: 1140px;
-  border: 1px solid var(--red);
+  padding: 20px;
 }
 
-/***** Home Components CSS *****/
-.home-header {
+/********** Header **********/
+.header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 0 0;
 }
 
-.txt-left {
-  font-family: "montserrat-bold";
-  flex-wrap: wrap;
+.header .profile-info {}
+
+.header .profile-info h1 {
+  font-family: 'montserrat';
+  font-size: 1.2em;
+  text-transform: capitalize;
+  color: var(--primary)
 }
-.txt-left span:nth-child(1) {
-  color: var(--blur-text);
-  font-size: .8em;
+
+.header .profile-info span {
+  font-family: 'montserrat';
+  font-weight: bold;
+  font-size: .9em;
+  color: var(--tertiary);
 }
-.txt-left span:nth-child(3) {
-  line-height: 24.38px;
-  bottom: 0;
-  display: flex;
-}
-/***** Home Content 1 CSS *****/
-.box-content1 {
-  background-color: var(--div-dark);
+
+.header .profile-img {
+  margin-left: auto;
+  margin-right: 0;
+  border-radius: 5px;
+  height: 40px;
+  width: 40px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  border-radius: 10px;
+  justify-content: center;
+  overflow: hidden;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.content1-txt {
-  position: relative;
+.header .profile-img img {
+  height: 100%;
   width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
+  margin: auto;
+  object-fit: cover;
 }
-.content1-txt div {
+
+/********** Introduction **********/
+.introduction {
   position: relative;
-  top: -30px;
-  left: 170px;
-  transform: translate(-50%);
-  word-wrap: break-word;
-  white-space: normal;
-  width: 250px;
+  background-color: var(--primary);
+  border-radius: 15px;
+  margin: auto;
+  padding: 27px;
+  overflow: hidden;
+  margin-top: 28px;
+  z-index: 1;
 }
-.content1-txt div h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(1.1rem, 2.5vw, 1.5rem);
-  color: var(--white);
-  white-space: normal;
-}
-.content1-txt div button {
+
+.introduction .banner {
   position: absolute;
-  top: 5rem;
-  padding: 7px;
-  width: 150px;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.introduction .get-started {
+  font-family: 'montserrat';
+  z-index: 3;
+  position: relative;
+  width: 60%;
+  font-size: .6em;
+  color: var(--light-mode);
+}
+
+.introduction .get-started button {
+  position: relative;
+  overflow: hidden;
+  font-family: 'lora';
+  font-size: 1.4em;
+  background-color: var(--secondary);
   border: none;
-  border-radius: 8px;
-  background-color: var(--card-btns-color);
-  color: var(--white);
-  font-family:'lora';
-  font-size: 1em;
-}
-.content1-img img {
-  width: 200px;
+  border-radius: 10px;
+  padding: 10px;
+  margin: auto;
+  width: 70%;
+  top: 10px;
+  color: var(--light-mode);
 }
 
-/***** Home Content 2 CSS *****/
-.box-content2 {
-  /* border: 1px solid red; */
+/********** Categories **********/
+.categories-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
 }
-.box-content2 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(1.1rem, 2.5vw, 1.5rem);
-  line-height: 40px;  
+.categories-container .practice-test, 
+.categories-container .quiz {
+background-color: var(--secondary);
+padding: 10px;
+margin: auto;
 }
-.content2-box {
-  display: flex;
-  gap: 10px;
-}
-.parent-box-left {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.parent-box-right {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 10px;
-}
-.child-box1 {
-  background-color: var(--card-btns-color);
-  border-radius: 15px;
-  padding: 15px;
-  color: var(--white);
-}
-.child-box1 span, .child-box2 span {
-  font-family: "lora";
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-}
-.child-box1 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(.8rem, 2.5vw, 1.3rem);
-}
-
-.child-box1 p {
-  font-family: 'hind';
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-  color: var(--white-60);
-}
-
-.child-box1-footer {
-  margin-top: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.child-box1-footer span {
-  font-family: "hind";
-  font-weight: 100;
-  font-size: clamp(.8rem, 2.5vw, 1rem);
-}
-.child-box1-footer button {
-  padding: 5px;
-  border: none;
-  border-radius: 50%;
-  text-align: center;
-  background-color: var(--white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.6em;
-  color: var(--card-btns-color);
-  transition: all ease .3s;
-}
-.child-box1-footer button:hover {
-  box-shadow: 1px 1px 20px  var(--black-93);
-}
-
-.child-box2 {
-  background-color: var(--bg-white-card);
-  border-radius: 15px;
-  padding: 15px;
-}
-.child-box1 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(.8rem, 2.5vw, 1.3rem);
-}
-.child-box2 p {
-  font-family: 'hind';
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-  color: var(--black-60);
-}
-.child-box2 div {
-  display: flex;
-  align-items: end;
-  justify-content: end;
-}
-.child-box2 div button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1em;
-  color: var(--white);
-  background-color: #256d85;
-  border: none;
-  border-radius: 5px;
-  padding: 3px;
-}
-
-
-
-
-
-
-
-
-/*--------------------(  for Mobile  )--------------------*/
-@media only screen and (max-width: 767px) {
-  .main-container {
-    width: calc(100% - 40px);
-  }
-  /***** Home Components CSS *****/
-  .home-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0 0 0;
-  }
-
-  .txt-left {
-    font-family: "montserrat-bold";
-    flex-wrap: wrap;
-  }
-  .txt-left span:nth-child(1) {
-    color: var(--blur-text);
-    font-size: .8em;
-  }
-  .txt-left span:nth-child(3) {
-    line-height: 24.38px;
-    bottom: 0;
-    display: flex;
-  }
-  /***** Home Content 1 CSS *****/
-  .box-content1 {
-    background-color: var(--div-dark);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 10px;
-  }
-
-  .content1-txt {
-    position: relative;
-  }
-  .content1-txt div {
-    position: absolute;
-    top: -60px;
-    left: 6rem;
-    width: 150px;
-  }
-  .content1-txt div h1 {
-    font-family: 'montserrat-bold';
-    font-size: clamp(1.1rem, 2.5vw, 1.3rem);
-    color: var(--white);
-  }
-  .content1-txt div button {
-    position: absolute;
-    top: 5.2rem;
-    padding: 7px;
-    width: 100px;
-    border: none;
-    border-radius: 8px;
-    background-color: var(--card-btns-color);
-    color: var(--white);
-    font-family:'lora';
-    font-size: .9em;
-  }
-  .content1-img img {
-    width: 200px;
-  }
-
-  /***** Home Content 2 CSS *****/
-.box-content2 {
-  /* border: 1px solid red; */
-}
-.box-content2 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(1.1rem, 2.5vw, 1.5rem);
-  line-height: 40px;  
-}
-.content2-box {
-  display: flex;
-  gap: 10px;
-}
-.parent-box-left {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.parent-box-right {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 10px;
-}
-.child-box1 {
-  background-color: var(--card-btns-color);
-  border-radius: 15px;
-  padding: 15px;
-  color: var(--white);
-}
-.child-box1 span, .child-box2 span {
-  font-family: "lora";
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-}
-.child-box1 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(.8rem, 2.5vw, 1.3rem);
-}
-
-.child-box1 p {
-  font-family: 'hind';
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-  color: var(--white-60);
-}
-
-.child-box1-footer {
-  margin-top: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.child-box1-footer span {
-  font-family: "hind";
-  font-weight: 100;
-  font-size: clamp(.8rem, 2.5vw, 1rem);
-}
-.child-box1-footer button {
-  padding: 5px;
-  border: none;
-  border-radius: 50%;
-  text-align: center;
-  background-color: var(--white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.6em;
-  color: var(--card-btns-color);
-  transition: all ease .3s;
-}
-.child-box1-footer button:hover {
-  box-shadow: 1px 1px 20px  var(--black-93);
-}
-
-.child-box2 {
-  background-color: var(--bg-white-card);
-  border-radius: 15px;
-  padding: 15px;
-}
-.child-box1 h1 {
-  font-family: 'montserrat-bold';
-  font-size: clamp(.8rem, 2.5vw, 1.3rem);
-}
-.child-box2 p {
-  font-family: 'hind';
-  font-size: clamp(.8rem, 2.5vw, .8rem);
-  font-weight: 100;
-  color: var(--black-60);
-}
-.child-box2 div {
-  display: flex;
-  align-items: end;
-  justify-content: end;
-}
-.child-box2 div button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1em;
-  color: var(--white);
-  background-color: #256d85;
-  border: none;
-  border-radius: 5px;
-  padding: 3px;
-}
-
-
-
-
-
-
-}
-
-/*--------------------(  for Tablet  )--------------------*/
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .container {
-    width: 100%;
-  }
-}
-/*--------------------(  for Desktops  )--------------------*/
-@media only screen and (min-width: 1200px) {
-  .main-container {
-    width: 500px;
-  }
+.categories-container .reviewer , 
+.categories-container .performance {
+background-color: var(--tertiary);
+opacity: var(--fade);
+padding: 10px;
+grid-row:  2;
+grid-column: 2;
 }
